<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/header_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_top"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-25dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="80dp"
            android:layout_marginHorizontal="@dimen/jarak_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hey, It's Me"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/text_size_20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/white"/>
        </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/profile"
                android:gravity="right"
                android:paddingLeft="@dimen/jarak_20dp"
                android:layout_marginLeft="@dimen/jarak_20dp"
                android:layout_marginTop="40dp"/>
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:elevation="10dp"
                android:background="@drawable/cream_box">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:text="About Me"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/jarak_20dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:fontFamily="@font/regular"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12sp"
                android:padding="@dimen/jarak_8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/jarak_20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Recent Portfolio"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/jarak_14dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/jarak_10dp"
                        android:src="@drawable/dimels"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/jarak_10dp"
                        android:src="@drawable/oscarbon"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/jarak_10dp"
                        android:src="@drawable/sweetdreams"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sentramarmer"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/jarak_20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hobby"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:layout_marginTop="@dimen/jarak_8dp"
                    android:text="@string/hobbie"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/jarak_8dp"
                    android:textSize="@dimen/text_size_12sp"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/jarak_12dp"/>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/jarak_20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Favorite Food"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:layout_marginTop="@dimen/jarak_8dp"
                    android:text="@string/fav_food"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/jarak_8dp"
                    android:textSize="@dimen/text_size_12sp"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/jarak_12dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/jarak_20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Favorite Drink"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:layout_marginTop="@dimen/jarak_8dp"
                    android:text="@string/fav_drink"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/jarak_8dp"
                    android:textSize="@dimen/text_size_12sp"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/jarak_12dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/jarak_20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ambition"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:layout_marginTop="@dimen/jarak_8dp"
                    android:text="@string/ambition"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/jarak_8dp"
                    android:textSize="@dimen/text_size_12sp"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/jarak_12dp"/>
            </LinearLayout>


            </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/detail"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/jarak_14dp"
            android:layout_marginTop="130dp"/>




    </RelativeLayout>


</ScrollView>

    <LinearLayout
        android:id="@+id/navbar"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/jarak_20dp"
        android:paddingVertical="@dimen/jarak_14dp"
        android:layout_marginBottom="10dp"
        android:elevation="@dimen/jarak_20dp"
        android:background="@drawable/navbar_bg"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/home"
            android:layout_marginRight="60dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/homeactive"/>
        <ImageView
            android:id="@+id/daily"
            android:layout_marginRight="60dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/list"/>
        <ImageView
            android:id="@+id/galery"
            android:layout_marginRight="60dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/image"/>
        <ImageView
            android:id="@+id/profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/user"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>