<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_top"
                    android:elevation="1dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-25dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:src="@drawable/header_profile" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_header"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="180dp"
                    android:elevation="@dimen/jarak_20dp"
                    android:layout_marginTop="40dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="80dp"
                android:layout_marginHorizontal="@dimen/jarak_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:background="@color/black"
                        android:elevation="-1dp"
                        android:paddingHorizontal="@dimen/jarak_10dp"
                        android:paddingVertical="@dimen/jarak_8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:fontFamily="@font/bold"
                            android:textSize="@dimen/text_size_14sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nim"
                            android:fontFamily="@font/regular"
                            android:textSize="@dimen/text_size_14sp"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical"
                    android:elevation="10dp"
                    android:background="@drawable/cream_box">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/yellow"
                        android:text="About Me"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="@dimen/jarak_20dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_me"
                        android:fontFamily="@font/regular"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_12sp"
                        android:padding="@dimen/jarak_8dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/jarak_20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="My Origin Place"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/black"/>

                    <WebView
                        android:id="@+id/webview"
                        android:layout_marginTop="@dimen/jarak_10dp"
                        android:layout_width="match_parent"
                        android:layout_height="480px"
                        tools:ignore="WebViewLayout" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/jarak_20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contact Me"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginTop="@dimen/jarak_10dp"
                            android:paddingVertical="@dimen/jarak_14dp"
                            android:paddingHorizontal="42dp"
                            android:background="@color/green">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/phone"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Telephone"
                                android:layout_marginTop="@dimen/jarak_8dp"
                                android:fontFamily="@font/bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0877-0370-7867"
                                android:fontFamily="@font/regular"
                                android:textSize="@dimen/text_size_8sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginLeft="@dimen/jarak_20dp"
                            android:layout_marginTop="@dimen/jarak_10dp"
                            android:paddingVertical="@dimen/jarak_14dp"
                            android:paddingHorizontal="30dp"
                            android:background="@color/green">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/email"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Email"
                                android:layout_marginTop="@dimen/jarak_8dp"
                                android:fontFamily="@font/bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="dalu.syahrun@gmail.com"
                                android:fontFamily="@font/regular"
                                android:textSize="@dimen/text_size_8sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/instagram_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginTop="@dimen/jarak_10dp"
                            android:paddingVertical="@dimen/jarak_14dp"
                            android:paddingHorizontal="42dp"
                            android:background="@color/green">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/instagram"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Instagram"
                                android:layout_marginTop="@dimen/jarak_8dp"
                                android:fontFamily="@font/bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="syahrundalu"
                                android:fontFamily="@font/regular"
                                android:textSize="@dimen/text_size_8sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/facebook_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginLeft="@dimen/jarak_20dp"
                            android:layout_marginTop="@dimen/jarak_10dp"
                            android:paddingVertical="@dimen/jarak_14dp"
                            android:paddingHorizontal="44dp"
                            android:background="@color/green">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/facebook"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Facebook"
                                android:layout_marginTop="@dimen/jarak_8dp"
                                android:fontFamily="@font/bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="syahrundalu"
                                android:fontFamily="@font/regular"
                                android:textSize="@dimen/text_size_8sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                    </LinearLayout>




                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/detail"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/jarak_14dp"
                android:layout_marginTop="200dp"/>




        </RelativeLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/navbar"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/jarak_20dp"
        android:paddingVertical="@dimen/jarak_14dp"
        android:layout_marginBottom="10dp"
        android:elevation="@dimen/jarak_20dp"
        android:background="@drawable/navbar_bg"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/home"
            android:layout_marginRight="60dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/home"/>
        <ImageView
            android:id="@+id/daily"
            android:layout_marginRight="60dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/list"/>
        <ImageView
            android:id="@+id/galery"
            android:layout_marginRight="60dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/image"/>
        <ImageView
            android:id="@+id/profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/useractive"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>